--- a/index.html
+++ b/index.html
@@ -7,6 +7,75 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
-
+    <!--begin header-->
+    <header>
+      <div class="logo">
+        <img src="./resources/css/logo.png" alt="company logo">
+      </div>
+    </header>
+    <!--main banner-->
+    <div class="main-banner">
+      <div class="container">
+        <div class="headline">
+          <h4>NEW ARRIVAL</h4>
+          <h1>SPORTS BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+    </div>
+    <!--navigation bar-->
+    <nav>
+      <ul class="container">
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+      <ul class="mobile-nav container">
+        <li>Menu</li>
+      </ul>
+    </nav>
+    <!--products and info-->
+    <div class="container">
+      <div class="products">
+        <div class="product pen">
+          <div class="product-image">
+            <img src="./resources/css/pen.png" alt="exploding pen">
+          </div>
+          <span class="description">Exploding Pen</span>
+        </div>
+        <div class="product watch">
+          <div class="product-image">
+            <img src="./resources/css/watch.png" alt="cellular watch">
+          </div>
+          <span class="description">Cellular Watch</span>
+        </div>
+        <div class="product glasses">
+          <div class="product-image">
+            <img src="./resources/css/glasses.png" alt="thermal glasses">
+          </div>
+          <span class="description">Thermal Glasses</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="business-info">
+        <div class="info">
+          <span class="title">Location</span>
+          <span>-47.346436, 84.32354</span>
+        </div>
+        <div class="info">
+          <span class="title">Hours</span>
+          <span>0800 - 1800</span>
+        </div>
+      </div>
+    </div>
+    <!--footer-->
+    <footer>
+      <div class="container">
+        Copyright Secret Agent Supply Inc.
+      </div>
+    </footer>
   </body>
 </html>
