--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
     <!--begin header-->
-    <header>
-      <div class="logo">
+    <div class="company">
+      <div class="container">
         <img src="./resources/css/logo.png" alt="company logo">
+        <span>SECRET AGENT SUPPLY INC.</span>
       </div>
-    </header>
+    </div>
     <!--main banner-->
     <div class="main-banner">
       <div class="container">
@@ -39,7 +40,7 @@
     <!--products and info-->
     <div class="container">
       <div class="products">
-        <div class="product pen">
+        <div class="product">
           <div class="product-image">
             <img src="./resources/css/pen.png" alt="exploding pen">
           </div>
